--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,12 @@
 {
-  "name": "Time Arena",
-  "short_name": "Arena",
+  "name": "TimeArena demo",
+  "short_name": "TimeArena",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#121212",
-  "theme_color": "#1f1f1f",
+  "background_color": "#0b1220",
+  "theme_color": "#0b1220",
   "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
