--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,10 @@
 {
   "name": "TimeArena demo",
   "short_name": "TimeArena",
-  "start_url": "./",
-  "scope": "./",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#070b14",
   "theme_color": "#0b1220",
-  "description": "Aplicație de câștigat timp pentru copil (demo local).",
   "icons": [
     { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
     { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
